Big update guy. Packets mostly working